# Back/app/Http/Controllers/horarios/HorarioPrevioDocenteController.php
@@ -2,11 +2,11 @@
 
 namespace App\Http\Controllers\horarios;
 
-use App\Http\Requests\HorarioPrevioDocenteRequest;
+use App\Http\Requests\horarios\HorarioPrevioDocenteRequest;
 use App\Models\Docente;
-use App\Models\DocenteMateria;
-use App\Models\HorarioPrevioDocente;
-use App\Services\HorarioPrevioDocenteService;
+use App\Models\horarios\DocenteUC;
+use App\Models\horarios\HorarioPrevioDocente;
+use App\Services\horarios\HorarioPrevioDocenteService;
 use App\Http\Controllers\Controller;
 
 use Illuminate\Http\Request;
@@ -20,7 +20,7 @@ class HorarioPrevioDocenteController extends Controller
     {
         $this->HorarioPrevioDocenteService = $HorarioPrevioDocenteService;
     }
-    
+
     public function index()
     {
         $horariosPreviosDocentes = $this->HorarioPrevioDocenteService->obtenerTodosHorariosPreviosDocentes();
@@ -30,27 +30,28 @@ class HorarioPrevioDocenteController extends Controller
 
     public function mostrarHorarioPrevioDocente(Request $request)
     {
-        $id_h_p_d=$request->input("id_h_p_d");
+        $id_h_p_d = $request->input("id_h_p_d");
         $horarioPrevioDocente = $this->HorarioPrevioDocenteService->obtenerHorarioPrevioDocentePorId($id_h_p_d);
         return view('horarios_previos.index', compact('horarioPrevioDocente'));
     }
 
 
-    public function crear(Docente $docente){
+    public function crear(Docente $docente)
+    {
         return view('horarioPrevioDocente.crearHorarioPrevioDocente', compact('docente'));
     }
 
-   
+
 
     public function store(HorarioPrevioDocenteRequest $request, Docente $docente)
-    {   
-        $dni=$docente->dni;
-        $dni_docente=$dni;
-        
+    {
+        $dni = $docente->dni;
+        $dni_docente = $dni;
+
         $dia = $request->filled("dia") ? $request->input("dia") : null;
-        $hora=$request->input("hora");
-    
-            // Validar si no se envió ninguna hora
+        $hora = $request->input("hora");
+
+        // Validar si no se envió ninguna hora
         if (empty($hora)) {
             $hora = "17:00"; // Asignar 17:00 si no se envió ninguna hora
         } else {
@@ -60,37 +61,38 @@ class HorarioPrevioDocenteController extends Controller
             $hora = $hora->format('H:i');
         }
 
-        $response = $this->HorarioPrevioDocenteService->guardarHorarioPrevioDocente($dni_docente,$dia,$hora);
+        $response = $this->HorarioPrevioDocenteService->guardarHorarioPrevioDocente($dni_docente, $dia, $hora);
         if (isset($response['success'])) {
-            return redirect()->route('mostrarFormularioDocenteMateria',['docente'=>$dni])->with('success', ['message' => $response['success']]);
+            return redirect()->route('mostrarFormularioDocenteUC', ['docente' => $dni])->with('success', ['message' => $response['success']]);
         } else {
-            return redirect()->route('mostrarFormularioHPD',['docente'=>$dni])->withErrors(['error' => $response['error']]);
+            return redirect()->route('mostrarFormularioHPD', ['docente' => $dni])->withErrors(['error' => $response['error']]);
         }
 
     }
 
-    public function formularioActualizar(HorarioPrevioDocente $h_p_d, DocenteMateria $dm ){
-        return view('horarioPrevioDocente.actualizarHorarioPrevioDocente',compact('h_p_d','dm'));
+    public function formularioActualizar(HorarioPrevioDocente $h_p_d, DocenteUC $dUC)
+    {
+        return view('horarioPrevioDocente.actualizarHorarioPrevioDocente', compact('h_p_d', 'dUC'));
     }
 
-    public function actualizar(HorarioPrevioDocenteRequest $request, HorarioPrevioDocente $h_p_d, DocenteMateria $dm)
+    public function actualizar(HorarioPrevioDocenteRequest $request, HorarioPrevioDocente $h_p_d, DocenteUC $dUC)
     {
-        $dia=$request->input("dia");
-        $hora=$request->input("hora");
+        $dia = $request->input("dia");
+        $hora = $request->input("hora");
 
-        $response = $this->HorarioPrevioDocenteService->actualizarHorarioPrevioDocente($dia,$hora,$h_p_d);
-        
+        $response = $this->HorarioPrevioDocenteService->actualizarHorarioPrevioDocente($dia, $hora, $h_p_d);
+
         if (isset($response['success'])) {
-            return redirect()->route('mostrarActualizarDocenteMateria',['h_p_d'=>$h_p_d->id_h_p_d,'dm'=>$dm->id_dm])->with('success', ['message' => $response['success']]);
+            return redirect()->route('mostrarActualizarDocenteUC', ['h_p_d' => $h_p_d->id_h_p_d, 'dUC' => $dUC->id_dUC])->with('success', ['message' => $response['success']]);
         } else {
-            return redirect()->route('mostrarActualizarHPD',['h_p_d'=>$h_p_d->id_h_p_d, 'dm'=>$dm->id_dm])->withErrors(['error' => $response['error']]);
+            return redirect()->route('mostrarActualizarHPD', ['h_p_d' => $h_p_d->id_h_p_d, 'dUC' => $dUC->id_dUC])->withErrors(['error' => $response['error']]);
         }
 
     }
 
     public function eliminar(Request $request)
     {
-        $id_h_p_d=$request->input("id_h_p_d");
+        $id_h_p_d = $request->input("id_h_p_d");
         $horarioPrevioDocente = HorarioPrevioDocente::find($id_h_p_d);
         $horarioPrevioDocente->delete();
 
@@ -100,7 +102,7 @@ class HorarioPrevioDocenteController extends Controller
         } else {
             return redirect()->route('horarioPrevioDocente.index')->withErrors(['error' => $response['error']]);
         }
-        return view('horarios_previos.index');
+        //return view('horarios_previos.index');
 
     }
 
